--- a/netlify.toml
+++ b/netlify.toml
@@ -243,6 +243,11 @@
   status = 301
 
 [[redirects]]
+  from = "/marlowe/learn-about-marlowe/"
+  to = "https://docs.marlowe.iohk.io/docs/introduction"
+  status = 301
+
+[[redirects]]
   from = "/marlowe/marlowe-get-started.html"
   to = "/marlowe/marlowe-get-started/"
   status = 301
