filip(fix): add initial redirect for testing with force

--- a/netlify.toml
+++ b/netlify.toml
@@ -246,6 +246,7 @@
   from = "/marlowe/learn-about-marlowe/"
   to = "https://docs.marlowe.iohk.io/docs/introduction"
   status = 301
+  force = true
 
 [[redirects]]
   from = "/marlowe/marlowe-get-started.html"
