--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-mdx": "^1.0.61",
     "gatsby-plugin-offline": "^3.0.29",
+    "gatsby-plugin-posthog": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.6.35",
