--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-mdx": "^1.0.61",
     "gatsby-plugin-offline": "^3.0.29",
-    "gatsby-plugin-posthog": "^1.0.1",
+    "dayjs": "^1.11.9",
+    "posthog-js": "^1.76.0",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.6.35",
