filip(feat): add working version of Faucet and partially working version of staking calculator

--- a/package.json
+++ b/package.json
@@ -15,39 +15,49 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@ctrl/tinycolor": "^4.0.3",
     "@docusaurus/core": "3.1.1",
     "@docusaurus/preset-classic": "3.1.1",
-    "@mdx-js/react": "^3.0.0",
-    "clsx": "^2.0.0",
-    "prism-react-renderer": "^2.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "styled-icons": "^9.0.1",
-    "@material-ui/core": "^4.12.4",
     "@emotion/core": "^10.0.22",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@emotion/styled-base": "^10.0.24",
+    "@input-output-hk/front-end-core-components": "^1.0.9",
+    "@input-output-hk/front-end-core-libraries": "^1.2.2",
+    "@input-output-hk/front-end-site-components": "^1.2.10",
+    "@input-output-hk/front-end-themes": "^1.2.6",
+    "@material-ui/core": "^4.12.4",
     "@mdx-js/loader": "^1.5.1",
     "@mdx-js/mdx": "^1.5.1",
+    "@mdx-js/react": "^3.0.0",
     "@mui/material": "^5.9.2",
+    "clsx": "^2.0.0",
+    "dayjs": "^1.11.9",
     "emotion": "^10.0.23",
     "emotion-server": "^10.0.17",
     "emotion-theming": "^10.0.19",
-    "dayjs": "^1.11.9",
-    "posthog-js": "^1.76.0",
     "is-absolute-url": "^3.0.3",
     "lodash.flatten": "^4.4.0",
     "lodash.startcase": "^4.4.0",
+    "moment": "^2.30.1",
+    "path-browserify": "^1.0.1",
+    "posthog-js": "^1.76.0",
+    "prism-react-renderer": "^2.3.0",
     "puppeteer": "^5.3.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-icons": "^5.0.1",
     "styled-components": "^4.4.1",
+    "styled-icons": "^9.0.1",
     "victory": "^36.5.3",
-    "react-icons": "^5.0.1"
+    "docusaurus-node-polyfills": "^1.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.1",
     "@docusaurus/tsconfig": "3.1.1",
     "@docusaurus/types": "3.1.1",
+    "@types/styled-components": "^5.1.34",
     "typescript": "~5.2.2"
   },
   "browserslist": {
