filip(feat): add p3 homepage design implementation (provisional rive file)

--- a/package.json
+++ b/package.json
@@ -49,7 +49,11 @@
     "react-tooltip": "^4.2.21",
     "styled-components": "^6.1.10",
     "styled-icons": "^9.0.1",
-    "victory": "^36.5.3"
+    "victory": "^36.5.3",
+    "swiper": "^11.1.14",
+    "framer-motion": "^11.11.7",
+    "@rive-app/react-webgl": "^4.14.4",
+    "file-loader": "^6.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.1",
