--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-tooltip": "^4.2.21",
     "styled-components": "^6.1.10",
     "styled-icons": "^9.0.1",
-    "victory": "^36.5.3"
+    "victory": "^36.5.3",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.1",
