filip(feat): add docusaurus GTM script

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ctrl/tinycolor": "^4.0.3",
     "@docusaurus/core": "3.1.1",
     "@docusaurus/plugin-client-redirects": "3.1.1",
+    "@docusaurus/plugin-google-analytics": "^3.6.3",
     "@docusaurus/preset-classic": "3.1.1",
     "@emotion/core": "^10.0.22",
     "@emotion/react": "^11.9.3",
@@ -27,12 +28,15 @@
     "@input-output-hk/front-end-core-components": "^1.0.9",
     "@material-ui/core": "^4.12.4",
     "@mdx-js/react": "^3.0.1",
+    "@rive-app/react-webgl": "^4.14.4",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
     "docusaurus-node-polyfills": "^1.0.0",
     "emotion": "^10.0.23",
     "emotion-server": "^10.0.17",
     "emotion-theming": "^10.0.19",
+    "file-loader": "^6.2.0",
+    "framer-motion": "^11.11.7",
     "is-absolute-url": "^3.0.3",
     "lodash.flatten": "^4.4.0",
     "lodash.startcase": "^4.4.0",
@@ -46,15 +50,12 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "react-player": "^2.16.0",
     "react-tooltip": "^4.2.21",
     "styled-components": "^6.1.10",
     "styled-icons": "^9.0.1",
-    "victory": "^36.5.3",
     "swiper": "^11.1.14",
-    "framer-motion": "^11.11.7",
-    "@rive-app/react-webgl": "^4.14.4",
-    "file-loader": "^6.2.0",
-    "react-player": "^2.16.0"
+    "victory": "^36.5.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.1",
